<resources>
    <string name="app_name">NailSalon</string>
    <string name="cats_text">A little chill while whatching some cats(the first pic is my cat)</string>
    <string name="sound_play">Play</string>
    <string name="sound_pause">Pause</string>
    <string name="sound_stop">Stop</string>
    <string name="picture_text">Click on the camera button to start the camera</string>
    <string name="camera_button">Camera</string>
    <string name="html_button">Ask for data</string>
    <string name="html_text">This is an example of retrieving data with html because I couldn\'t think of a better idea :D</string>
    <string name="i_have_an_account">I have an account</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="registration">Registration</string>
    <string name="nailsalon24_7">24/7 NAILSALON</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_dont_have_an_account">I don\'t have an account</string>
    <string name="login">Login</string>
    <string name="logout">LOGOUT</string>
    <string name="sound_player">SOUNDPLAYER</string>
    <string name="html_request">HTML REQUEST</string>
    <string name="find_artist_home">FIND ARTIST</string>
    <string name="cats">CATS</string>
    <string name="picture">PICTURE</string>
    <string name="fa_makeup_artist">MAKEUP ARTIST</string>
    <string name="fa_masseuse">MASSEUSE</string>
    <string name="fa_pedicurist">PEDICURIST</string>
    <string name="fa_maniccurist">MANICURIST</string>
    <string name="fa_nail_technician">NAIL TECHNICIAN</string>
    <string name="best_artists">Best Artists</string>
    <string name="back">Back</string>
    <string name="select_date">Select Date</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="fees">Fees</string>
    <string name="select_time">Select Time</string>
</resources>